# json_example_project

./: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  ConfigurationManeger.cpp  ConfigurationManeger.h  Header.h
nlohmann/: CMakeLists.txt
